--- a/gnocchi/tests/functional/gabbits/aggregates-with-metric-ids.yaml
+++ b/gnocchi/tests/functional/gabbits/aggregates-with-metric-ids.yaml
@@ -124,12 +124,17 @@ tests:
           - ["2015-03-06T14:35:15+00:00", 1.0, 15.0]
 
     - name: get aggregates
+      desc: we put metric2 twice to ensure we retrieve it once
       POST: /v1/aggregates
       data:
-        operations: ["metric", ["$HISTORY['create metric1'].$RESPONSE['$.id']", "mean"], ["$HISTORY['create metric2'].$RESPONSE['$.id']", "mean"]]
+        operations: ["metric", ["$HISTORY['create metric1'].$RESPONSE['$.id']", "mean"], ["$HISTORY['create metric2'].$RESPONSE['$.id']", "mean"],  ["$HISTORY['create metric2'].$RESPONSE['$.id']", "mean"]]
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.references[0].archive_policy.name: cookies
+        $.references[1].archive_policy.name: cookies
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 43.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, -2.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 10.0]
@@ -138,7 +143,7 @@ tests:
           - ["2015-03-06T14:34:15+00:00", 1.0, -16.0]
           - ["2015-03-06T14:35:12+00:00", 1.0, 9.0]
           - ["2015-03-06T14:35:15+00:00", 1.0, 11.0]
-        $."$HISTORY['create metric2'].$RESPONSE['$.id']_mean":
+        $.measures."$HISTORY['create metric2'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 2.0]
           - ["2015-03-06T14:34:00+00:00", 60.0, 4.5]
           - ["2015-03-06T14:35:00+00:00", 60.0, 12.5]
@@ -156,14 +161,18 @@ tests:
       data:
         operations: ["metric", ["$HISTORY['create metric1'].$RESPONSE['$.id']", "mean"], ["$HISTORY['create metric2'].$RESPONSE['$.id']", "mean"]]
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.references[0].archive_policy.name: cookies
+        $.references[1].archive_policy.name: cookies
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:34:00+00:00", 60.0, -2.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 10.0]
           - ["2015-03-06T14:34:12+00:00", 1.0, 12.0]
           - ["2015-03-06T14:34:15+00:00", 1.0, -16.0]
           - ["2015-03-06T14:35:12+00:00", 1.0, 9.0]
-        $."$HISTORY['create metric2'].$RESPONSE['$.id']_mean":
+        $.measures."$HISTORY['create metric2'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:34:00+00:00", 60.0, 4.5]
           - ["2015-03-06T14:35:00+00:00", 60.0, 12.5]
           - ["2015-03-06T14:34:12+00:00", 1.0, 4.0]
@@ -175,12 +184,16 @@ tests:
       data:
         operations: ["metric", ["$HISTORY['create metric1'].$RESPONSE['$.id']", "max"], ["$HISTORY['create metric2'].$RESPONSE['$.id']", "min"]]
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_max":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.references[0].archive_policy.name: cookies
+        $.references[1].archive_policy.name: cookies
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".max:
           - ["2015-03-06T14:33:00+00:00", 60.0, 43.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, 12.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 11.0]
-        $."$HISTORY['create metric2'].$RESPONSE['$.id']_min":
+        $.measures."$HISTORY['create metric2'].$RESPONSE['$.id']".min:
           - ["2015-03-06T14:33:00+00:00", 60.0, 2.0]
           - ["2015-03-06T14:34:00+00:00", 60.0, 4.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 10.0]
@@ -190,8 +203,11 @@ tests:
       data:
         operations: ["+", ["metric", ["$HISTORY['create metric1'].$RESPONSE['$.id']", "mean"], ["$HISTORY['create metric2'].$RESPONSE['$.id']", "mean"]], 2.0]
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.references[0].archive_policy.name: cookies
+        $.references[1].archive_policy.name: cookies
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 45.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, 0.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 12.0]
@@ -200,7 +216,7 @@ tests:
           - ["2015-03-06T14:34:15+00:00", 1.0, -14.0]
           - ["2015-03-06T14:35:12+00:00", 1.0, 11.0]
           - ["2015-03-06T14:35:15+00:00", 1.0, 13.0]
-        $."$HISTORY['create metric2'].$RESPONSE['$.id']_mean":
+        $.measures."$HISTORY['create metric2'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 4.0]
           - ["2015-03-06T14:34:00+00:00", 60.0, 6.5]
           - ["2015-03-06T14:35:00+00:00", 60.0, 14.5]
@@ -219,12 +235,16 @@ tests:
           - 60
           - ["metric", ["$HISTORY['create metric1'].$RESPONSE['$.id']", "mean"], ["$HISTORY['create metric2'].$RESPONSE['$.id']", "mean"]]
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.references[0].archive_policy.name: cookies
+        $.references[1].archive_policy.name: cookies
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 43.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, -2.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 10.0]
-        $."$HISTORY['create metric2'].$RESPONSE['$.id']_mean":
+        $.measures."$HISTORY['create metric2'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 2.0]
           - ["2015-03-06T14:34:00+00:00", 60.0, 4.5]
           - ["2015-03-06T14:35:00+00:00", 60.0, 12.5]
@@ -238,13 +258,17 @@ tests:
           - 2
           - ["metric", ["$HISTORY['create metric1'].$RESPONSE['$.id']", "mean"], ["$HISTORY['create metric2'].$RESPONSE['$.id']", "mean"]]
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.references[0].archive_policy.name: cookies
+        $.references[1].archive_policy.name: cookies
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:34:12+00:00", 1.0, 27.55]
           - ["2015-03-06T14:34:15+00:00", 1.0, -2.0]
           - ["2015-03-06T14:35:12+00:00", 1.0, -3.5]
           - ["2015-03-06T14:35:15+00:00", 1.0, 10.0]
-        $."$HISTORY['create metric2'].$RESPONSE['$.id']_mean":
+        $.measures."$HISTORY['create metric2'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:34:12+00:00", 1.0, 3.0]
           - ["2015-03-06T14:34:15+00:00", 1.0, 4.5]
           - ["2015-03-06T14:35:12+00:00", 1.0, 7.5]
@@ -256,8 +280,9 @@ tests:
       data:
         operations: "(metric $HISTORY['create metric1'].$RESPONSE['$.id'] mean)"
       response_json_paths:
-        $.`len`: 1
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references.`len`: 1
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 43.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, -2.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 10.0]
@@ -272,8 +297,9 @@ tests:
       data:
         operations: "(aggregate mean (metric $HISTORY['create metric1'].$RESPONSE['$.id'] mean))"
       response_json_paths:
-        $.`len`: 1
-        $."aggregated":
+        $.references.`len`: 1
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.measures.aggregated:
           - ["2015-03-06T14:33:00+00:00", 60.0, 43.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, -2.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 10.0]
@@ -288,8 +314,10 @@ tests:
       data:
         operations: "(+ (metric ($HISTORY['create metric1'].$RESPONSE['$.id'] mean) ($HISTORY['create metric2'].$RESPONSE['$.id'] mean)) 2.0)"
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 45.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, 0.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 12.0]
@@ -298,7 +326,7 @@ tests:
           - ["2015-03-06T14:34:15+00:00", 1.0, -14.0]
           - ["2015-03-06T14:35:12+00:00", 1.0, 11.0]
           - ["2015-03-06T14:35:15+00:00", 1.0, 13.0]
-        $."$HISTORY['create metric2'].$RESPONSE['$.id']_mean":
+        $.measures."$HISTORY['create metric2'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 4.0]
           - ["2015-03-06T14:34:00+00:00", 60.0, 6.5]
           - ["2015-03-06T14:35:00+00:00", 60.0, 14.5]
@@ -313,8 +341,10 @@ tests:
       data:
         operations: "(- (metric $HISTORY['create metric1'].$RESPONSE['$.id'] mean) (metric $HISTORY['create metric2'].$RESPONSE['$.id'] mean)))"
       response_json_paths:
-        $.`len`: 1
-        $."aggregated":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.measures.aggregated:
           - ["2015-03-06T14:33:00+00:00", 60.0, 41.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, -6.5]
           - ["2015-03-06T14:35:00+00:00", 60.0, -2.5]
@@ -329,8 +359,10 @@ tests:
       data:
         operations: "(aggregate mean (metric ($HISTORY['create metric1'].$RESPONSE['$.id'] mean) ($HISTORY['create metric2'].$RESPONSE['$.id'] mean)))"
       response_json_paths:
-        $.`len`: 1
-        $."aggregated":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.measures.aggregated:
           - ["2015-03-06T14:33:00+00:00", 60.0, 22.55]
           - ["2015-03-06T14:34:00+00:00", 60.0, 1.25]
           - ["2015-03-06T14:35:00+00:00", 60.0, 11.25]
@@ -345,8 +377,10 @@ tests:
       data:
         operations: "(negative (absolute (aggregate mean (metric ($HISTORY['create metric1'].$RESPONSE['$.id'] mean) ($HISTORY['create metric2'].$RESPONSE['$.id'] mean)))))"
       response_json_paths:
-        $.`len`: 1
-        $."aggregated":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.measures.aggregated:
           - ["2015-03-06T14:33:00+00:00", 60.0, -22.55]
           - ["2015-03-06T14:34:00+00:00", 60.0, -1.25]
           - ["2015-03-06T14:35:00+00:00", 60.0, -11.25]
@@ -374,8 +408,10 @@ tests:
       data:
         operations: "(metric ($HISTORY['create metric1'].$RESPONSE['$.id'] mean) ($HISTORY['create metric2'].$RESPONSE['$.id'] mean))"
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric2'].$RESPONSE['$.id']
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 43.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, -2.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 10.0]
@@ -388,7 +424,7 @@ tests:
           - ["2015-03-06T14:35:15+00:00", 1.0, 11.0]
           - ['2015-03-06T14:37:00+00:00', 1.0, 15.0]
           - ['2015-03-06T14:38:00+00:00', 1.0, 15.0]
-        $."$HISTORY['create metric2'].$RESPONSE['$.id']_mean":
+        $.measures."$HISTORY['create metric2'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 2.0]
           - ["2015-03-06T14:34:00+00:00", 60.0, 4.5]
           - ["2015-03-06T14:35:00+00:00", 60.0, 12.5]
@@ -407,8 +443,10 @@ tests:
       data:
         operations: "(metric ($HISTORY['create metric1'].$RESPONSE['$.id'] mean) ($HISTORY['create metric4'].$RESPONSE['$.id'] mean))"
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric4'].$RESPONSE['$.id']
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 43.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, -2.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 10.0]
@@ -421,7 +459,7 @@ tests:
           - ["2015-03-06T14:35:15+00:00", 1.0, 11.0]
           - ['2015-03-06T14:37:00+00:00', 1.0, 15.0]
           - ['2015-03-06T14:38:00+00:00', 1.0, 15.0]
-        $."$HISTORY['create metric4'].$RESPONSE['$.id']_mean":
+        $.measures."$HISTORY['create metric4'].$RESPONSE['$.id']".mean:
           - ["2017-04-06T14:33:00+00:00", 60.0, 20.0]
           - ["2017-04-06T14:34:00+00:00", 60.0, 10.0]
           - ["2017-04-06T14:33:57+00:00", 1.0, 20.0]
@@ -432,8 +470,10 @@ tests:
       data:
         operations: "(metric ($HISTORY['create metric1'].$RESPONSE['$.id'] mean) ($HISTORY['create metric4'].$RESPONSE['$.id'] mean))"
       response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean":
+        $.references.`len`: 2
+        $.references[0].id: $HISTORY['create metric1'].$RESPONSE['$.id']
+        $.references[1].id: $HISTORY['create metric4'].$RESPONSE['$.id']
+        $.measures."$HISTORY['create metric1'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, 43.1]
           - ["2015-03-06T14:34:00+00:00", 60.0, -2.0]
           - ["2015-03-06T14:35:00+00:00", 60.0, 10.0]
@@ -450,7 +490,7 @@ tests:
           - ['2015-03-06T14:38:00+00:00', 1.0, 15.0]
           - ["2017-04-06T14:33:57+00:00", 1.0, !AssertNAN ]
           - ["2017-04-06T14:34:12+00:00", 1.0, !AssertNAN ]
-        $."$HISTORY['create metric4'].$RESPONSE['$.id']_mean":
+        $.measures."$HISTORY['create metric4'].$RESPONSE['$.id']".mean:
           - ["2015-03-06T14:33:00+00:00", 60.0, !AssertNAN ]
           - ["2015-03-06T14:34:00+00:00", 60.0, !AssertNAN ]
           - ["2015-03-06T14:35:00+00:00", 60.0, !AssertNAN ]
@@ -467,19 +507,6 @@ tests:
           - ['2015-03-06T14:38:00+00:00', 1.0, !AssertNAN ]
           - ["2017-04-06T14:33:57+00:00", 1.0, 20.0]
           - ["2017-04-06T14:34:12+00:00", 1.0, 10.0]
-
-    - name: no overlap null light check due to previous xfail
-      POST: /v1/aggregates?fill=null
-      data:
-        operations: "(metric ($HISTORY['create metric1'].$RESPONSE['$.id'] mean) ($HISTORY['create metric4'].$RESPONSE['$.id'] mean))"
-      response_json_paths:
-        $.`len`: 2
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean".`len`: 16
-        $."$HISTORY['create metric4'].$RESPONSE['$.id']_mean".`len`: 16
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean"[0]: ["2015-03-06T14:33:00+00:00", 60.0, 43.1]
-        $."$HISTORY['create metric1'].$RESPONSE['$.id']_mean"[7]: ["2015-03-06T14:33:57+00:00", 1.0, 43.1]
-        $."$HISTORY['create metric4'].$RESPONSE['$.id']_mean"[5]: ["2017-04-06T14:33:00+00:00", 60.0, 20.0]
-        $."$HISTORY['create metric4'].$RESPONSE['$.id']_mean"[14]: ["2017-04-06T14:33:57+00:00", 1.0, 20.0]
 
 # Negative tests
 
