rest: fix some id search issue
id key and like operator have some issue, due to the binary nature of
uuid.

This change avoids it.

Closes #450
Closes #491

--- a/gnocchi/tests/functional/gabbits/search.yaml
+++ b/gnocchi/tests/functional/gabbits/search.yaml
@@ -40,6 +40,29 @@ tests:
        - "expected a list for dictionary value @ data["
        - "'and']"
 
+    - name: search like id
+      POST: /v1/search/resource/generic
+      data:
+        like:
+          id: fa%
+      status: 400
+      response_strings:
+       - "Invalid input: extra keys not allowed @ data["
+       - "'like']["
+       - "'id']"
+
+    - name: search like list id
+      POST: /v1/search/resource/generic
+      data:
+        like:
+          id:
+            - fa%
+      status: 400
+      response_strings:
+       - "Invalid input: extra keys not allowed @ data["
+       - "'like']["
+       - "'id']"
+
     - name: search invalid ne value
       desc: attribute value for binary operator must not be dict or list
       POST: /v1/search/resource/generic
