--- a/doc/source/rest.yaml
+++ b/doc/source/rest.yaml
@@ -817,6 +817,17 @@
       "operations": ["*", ["aggregate", "mean", ["metric", "cpu.util", "mean"]], 4]
     }
 
+- name: get-aggregates-by-attributes-lookup-wildcard
+  request: |
+    POST /v1/aggregates?start=2014-10-06T14:34 HTTP/1.1
+    Content-Type: application/json
+
+    {
+      "resource_type": "instance",
+      "search": {"=": {"server_group": "my_autoscaling_group"}},
+      "operations": ["*", ["aggregate", "mean", ["metric", "cpu*", "mean"]], 4]
+    }
+
 - name: get-aggregates-by-attributes-lookup-groupby
   request: |
     POST /v1/aggregates?start=2014-10-06T14:34&groupby=host&groupby=flavor_id HTTP/1.1
